--- a/Curso-CSS-Universidade_XTI/WebContent/Aula_013-Background/CSS/Background.css
+++ b/Curso-CSS-Universidade_XTI/WebContent/Aula_013-Background/CSS/Background.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(img/Lighthouse.jpg);
+    background-image: url(../CSS/img/Lighthouse.jpg);
     background-repeat: no-repeat; 
 }
 div {
@@ -7,10 +7,10 @@ div {
     height: 320px;
     border: 2px solid black;
 /*    background-color: #6699FF;
-    background-image: url(img/Lighthouse.jpg);
+    background-image: url(../CSS/img/Lighthouse.jpg);
     background-repeat: no-repeat-x;
     background-attachment: fixed;
     background-position: 20px 90px;*/
     
-    background: #6699FF url(img/Lighthouse.jpg) no-repeat-x fixed 20px 90px;
+    background: #6699FF url(../CSS/img/Lighthouse.jpg) no-repeat-x fixed 20px 90px;
 }
